--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Spacey</title>
+    <title>KittY</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="navcontainer">
             <nav>
-                <h1>SPACEY</h1>
-                <p>HOME</p>
-                <p>ABOUT</p>
-                <p>TICKETS</p>
-                <p>ROCKETS</p>
-                <p>PRICING</p>
-                //implement hover effect
+                <div class="mainnav">
+                    <h1 class="button">KITTY</h1>
+                    <p class="button">HOME</p>
+                    <p class="button">ABOUT</p>
+                    <p class="button">FOOD</p>                    
+                    <p class="button">PAWS</p>
+                    //implement hover effect
+                </div>
+                <div class="logo">
+                    //implement cat logo here
+                </div>
             </nav>
         </div>
     </header>
 
     <main>
-        <div class="section galaxy">
+        <div class="section ginger">
             <h4></h4>
             <h2></h2>
-            <p class = 'readmorebutton'></p>
+            <p class = 'readmore button'></p>
+            //implement hover effect
         </div>
-        <div class="section landscape">
+        <div class="section forestcat">
             <h4></h4>
             <h2></h2>
-            <p class = 'readmorebutton'></p>
+            <p class = 'readmore button'></p>
+            //implement hover effect
         </div>
         <div class="section planets">
             <h4></h4>
             <h2></h2>
-            <p class = 'readmorebutton'></p>
+            <p class = 'readmore button'></p>
+            //implement hover effect
         </div>
     </main>
 
     <footer>
-        <p>SpaceY © 2023</p>
-        <nav class="socialsbar"></nav>
-        
-        //add back to top button        
-        //add social media bar
+        <p>KittY © 2023</p>
+        <nav class="socialsbar">
+            <img/>
+            <img/>
+            <img/>
+        </nav>        
+        //add back to top button
+        //social bar could go here too        
     </footer>
 </body>
 </html>
