added implementation comments to html

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
                     <p class="button">ABOUT</p>
                     <p class="button">FOOD</p>                    
                     <p class="button">PAWS</p>
-                    //implement hover effect
+                    <!--implement hover effect-->
+                    
                 </div>
                 <div class="logo">
-                    //implement cat logo here
+                    <!--implement cat logo here-->
                 </div>
             </nav>
         </div>
@@ -28,19 +29,19 @@
             <h4></h4>
             <h2></h2>
             <p class = 'readmore button'></p>
-            //implement hover effect
+            <!--implement hover effect-->
         </div>
         <div class="section forestcat">
             <h4></h4>
             <h2></h2>
             <p class = 'readmore button'></p>
-            //implement hover effect
+            <!--implement hover effect-->
         </div>
         <div class="section planets">
             <h4></h4>
             <h2></h2>
             <p class = 'readmore button'></p>
-            //implement hover effect
+            <!--implement hover effect-->
         </div>
     </main>
 
@@ -51,8 +52,8 @@
             <img/>
             <img/>
         </nav>        
-        //add back to top button
-        //social bar could go here too        
+        <!--back to top button-->
+        <!--social media bar-->       
     </footer>
 </body>
 </html>
