added background images and nav bar

--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
         <div class="navcontainer">
             <nav>
                 <div class="mainnav">
-                    <h1 class="button">KITTY</h1>
-                    <p class="button">HOME</p>
-                    <p class="button">ABOUT</p>
-                    <p class="button">FOOD</p>                    
-                    <p class="button">PAWS</p>
-                    <!--implement hover effect-->
-                    
-                </div>
-                <div class="logo">
-                    <!--implement cat logo here-->
-                </div>
+                    <h1 class="button toplink" href="">KITTY</h1>
+                    <a class="button toplink" href="">HOME</a>
+                    <a class="button toplink" href="">ABOUT</a>
+                    <a class="button toplink" href="">FOOD</a>                    
+                    <a class="button toplink"href=''>PAWS</a>
+                    <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>
+                    <!--implement hover effect-->   
+                </div>                  
             </nav>
         </div>
     </header>
@@ -37,7 +34,7 @@
             <p class = 'readmore button'></p>
             <!--implement hover effect-->
         </div>
-        <div class="section planets">
+        <div class="section mainecoon">
             <h4></h4>
             <h2></h2>
             <p class = 'readmore button'></p>
@@ -46,7 +43,7 @@
     </main>
 
     <footer>
-        <p>KittY © 2023</p>
+        <p>KittY © 2025</p>
         <nav class="socialsbar">
             <img/>
             <img/>
