--- a/index.html
+++ b/index.html
@@ -23,22 +23,29 @@
 
     <main>
         <div class="section ginger">
-            <h4></h4>
-            <h2></h2>
-            <p class = 'readmore button'></p>
-            <!--implement hover effect-->
+            <div class="sectiontext">
+                <h3>Ginger</h3>
+                <h2>Sneaky but stupid!</h2>
+                <p class = 'readmore button'>Read More</p>
+                <!--implement hover effect-->
+            </div>
+              
         </div>
         <div class="section forestcat">
-            <h4></h4>
-            <h2></h2>
-            <p class = 'readmore button'></p>
-            <!--implement hover effect-->
+            <div class="sectiontext">
+                <h3>Norwegian Forest Cat</h3>
+                <h2>Majestic but Fluffy</h2>
+                <p class = 'readmore button'>Read More</p>
+                <!--implement hover effect-->
+            </div>
         </div>
         <div class="section mainecoon">
-            <h4></h4>
-            <h2></h2>
-            <p class = 'readmore button'></p>
-            <!--implement hover effect-->
+            <div class="sectiontext">
+                <h3>Main Coone</h3>
+                <h2>Scary but soft</h2>
+                <p class = 'readmore button'>Read More</p>
+                <!--implement hover effect-->
+            </div>
         </div>
     </main>
 
