added social bar and styled main text

--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 <body>
     <header>
         <div class="navcontainer">
-            <nav>
-                <div class="mainnav">
-                    <h1 class="button toplink" href="">KITTY</h1>
-                    <a class="button toplink" href="">HOME</a>
-                    <a class="button toplink" href="">ABOUT</a>
-                    <a class="button toplink" href="">FOOD</a>                    
-                    <a class="button toplink"href=''>PAWS</a>
-                    <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>
-                    <!--implement hover effect-->   
-                </div>                  
+            <nav class="mainnav">
+                <h1 class="button toplink" href="">KITTY</h1>
+                <a class="button toplink" href="">HOME</a>
+                <a class="button toplink" href="">ABOUT</a>
+                <a class="button toplink" href="">FOOD</a>                    
+                <a class="button toplink"href=''>PAWS</a>
+                <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>
+                <!--implement hover effect-->                     
             </nav>
         </div>
     </header>
@@ -27,7 +25,6 @@
                 <h3>Ginger</h3>
                 <h2>Sneaky but stupid!</h2>
                 <p class = 'readmore button'>Read More</p>
-                <!--implement hover effect-->
             </div>
               
         </div>
@@ -50,14 +47,13 @@
     </main>
 
     <footer>
-        <p>KittY © 2025</p>
+        <p class="footertext">KittY © 2025</p>
         <nav class="socialsbar">
-            <img/>
-            <img/>
-            <img/>
+            <a href="https://www.instagram.com/"><img src="instagram.png"/></a>
+            <a href="https://www.facebook.com"><img src="facebook.png"/></a>
+            <a href="https://x.com/?lang=en&mx=2"><img src="twitter.png"/></a>
         </nav>        
-        <!--back to top button-->
-        <!--social media bar-->       
+        <!--back to top button-->    
     </footer>
 </body>
 </html>
