added back to top button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>KittY</title>
     <link rel="stylesheet" href="style.css">
+    <script src="app.js"defer></script>
 </head>
 <body>
     <header>
@@ -13,8 +14,7 @@
                 <a class="button toplink" href="">ABOUT</a>
                 <a class="button toplink" href="">FOOD</a>                    
                 <a class="button toplink"href=''>PAWS</a>
-                <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>
-                <!--implement hover effect-->                     
+                <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>       
             </nav>
         </div>
     </header>
@@ -24,7 +24,7 @@
             <div class="sectiontext">
                 <h3>Ginger</h3>
                 <h2>Sneaky but stupid!</h2>
-                <p class = 'readmore button'>Read More</p>
+                <a href="" class = 'readmore button'>Read More</a>
             </div>
               
         </div>
@@ -32,21 +32,20 @@
             <div class="sectiontext">
                 <h3>Norwegian Forest Cat</h3>
                 <h2>Majestic but Fluffy</h2>
-                <p class = 'readmore button'>Read More</p>
-                <!--implement hover effect-->
+                <a href="" class = 'readmore button'>Read More</a>
             </div>
         </div>
         <div class="section mainecoon">
             <div class="sectiontext">
                 <h3>Main Coone</h3>
                 <h2>Scary but soft</h2>
-                <p class = 'readmore button'>Read More</p>
-                <!--implement hover effect-->
+                <a href="" class = 'readmore button'>Read More</a>
             </div>
         </div>
     </main>
 
-    <footer>
+    <footer id="footer">
+        <a href="http://localhost:5500/#" class="backtotop">Back to Top!</a>
         <p class="footertext">KittY © 2025</p>
         <nav class="socialsbar">
             <a href="https://www.instagram.com/"><img src="instagram.png"/></a>
