--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
     <header>
         <div class="navcontainer">
             <nav class="mainnav">
-                <h1 class="button toplink" href="">KITTY</h1>
-                <a class="button toplink" href="">HOME</a>
-                <a class="button toplink" href="">ABOUT</a>
-                <a class="button toplink" href="">FOOD</a>                    
-                <a class="button toplink"href=''>PAWS</a>
-                <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>       
+                <h1 class="toplink" href="http://localhost:5500/#">KITTY</h1>
+                <a class="toplink" href="http://localhost:5500/#">HOME</a>
+                <a class=" toplink" href="http://localhost:5500/#">STUPID</a>
+                <a class=" toplink" href="#forestcat">FLUFFY</a>
+                <a class=" toplink" href="#mainecoon">SOFT</a>
+                <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>                   
             </nav>
         </div>
     </header>
 
     <main>
         <div class="section ginger">
-            <div class="sectiontext">
+            <div id="ginger" class="sectiontext">
                 <h3>Ginger</h3>
                 <h2>Sneaky but stupid!</h2>
                 <a href="" class = 'readmore button'>Read More</a>
             </div>
               
         </div>
-        <div class="section forestcat">
+        <div id='forestcat' class="section forestcat">
             <div class="sectiontext">
                 <h3>Norwegian Forest Cat</h3>
                 <h2>Majestic but Fluffy</h2>
                 <a href="" class = 'readmore button'>Read More</a>
             </div>
         </div>
-        <div class="section mainecoon">
+        <div id="mainecoon" class="section mainecoon">
             <div class="sectiontext">
                 <h3>Main Coone</h3>
                 <h2>Scary but soft</h2>
@@ -51,8 +51,7 @@
             <a href="https://www.instagram.com/"><img src="instagram.png"/></a>
             <a href="https://www.facebook.com"><img src="facebook.png"/></a>
             <a href="https://x.com/?lang=en&mx=2"><img src="twitter.png"/></a>
-        </nav>        
-        <!--back to top button-->    
+        </nav>           
     </footer>
 </body>
 </html>
