added reflection and favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>KittY</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"defer></script>
+    <link rel="icon" type="image/x-icon" href="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740">
 </head>
 <body>
     <header>
