trying to fix nav bug

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <div class="navcontainer">
             <nav class="mainnav">
-                <h1 class="toplink" href="http://localhost:5500/#">KITTY</h1>
-                <a class="toplink" href="http://localhost:5500/#">HOME</a>
-                <a class=" toplink" href="http://localhost:5500/#">STUPID</a>
+                <h1 class="toplink" href="https://rosiecorio.github.io/week-one-project/#">KITTY</h1>
+                <a class="toplink" href="https://rosiecorio.github.io/week-one-project/#">HOME</a>
+                <a class=" toplink" href="https://rosiecorio.github.io/week-one-project/#">STUPID</a>
                 <a class=" toplink" href="#forestcat">FLUFFY</a>
                 <a class=" toplink" href="#mainecoon">SOFT</a>
                 <img class="logo toplink" src="https://img.freepik.com/premium-vector/lovely-cat-face-black-circle-as-sticker-design-your-logo-icon-sign-clothes-website_649709-283.jpg?w=740"/>                   
