--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="ginger" class="sectiontext">
                 <h3>Ginger</h3>
                 <h2>Sneaky but stupid!</h2>
-                <a href="" class = 'readmore button'>Read More</a>
+                <a href="" class = 'readmore button' aria-label='Read more about Ginger cats'>Read More</a>
             </div>
               
         </div>
@@ -33,14 +33,14 @@
             <div class="sectiontext">
                 <h3>Norwegian Forest Cat</h3>
                 <h2>Majestic but Fluffy</h2>
-                <a href="" class = 'readmore button'>Read More</a>
+                <a href="" class = 'readmore button' aria-label='Read more about Norwegian Forest cats'>Read More</a>
             </div>
         </div>
         <div id="mainecoon" class="section mainecoon">
             <div class="sectiontext">
                 <h3>Main Coone</h3>
                 <h2>Scary but soft</h2>
-                <a href="" class = 'readmore button'>Read More</a>
+                <a href="" class = 'readmore button' aria-label='Read more about Maine Coon cats'>Read More</a>
             </div>
         </div>
     </main>
